--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RestaurarContrasenia" />
-        <activity android:name=".Proyectos"></activity>
+        <activity android:name=".Proyectos" />
+        <activity android:name=".MisProyectos"></activity>
     </application>
 
 </manifest>
