--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 11 18:35:03 COT 2018
-sdk.dir=C\:\\Users\\disco\\AppData\\Local\\Android\\Sdk
+#Sun Nov 11 23:35:20 COT 2018
+sdk.dir=C\:\\Users\\cam-c\\AppData\\Local\\Android\\Sdk
