Agrego a mis proyectos, los botones y empiezo a llamar datos

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 11 23:35:20 COT 2018
-sdk.dir=C\:\\Users\\cam-c\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\disco\\AppData\\Local\\Android\\Sdk
