Se entrega totalmente terminado el login se loguea con Google y con Correo ambos se añaden a la base de usuarios de firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".RestaurarContrasenia" />
         <activity android:name=".Proyectos" />
-        <activity android:name=".MisProyectos">  </activity>
+        <activity android:name=".MisProyectos"></activity>
+        <activity android:name=".Home"></activity>
     </application>
 
 </manifest>
